2007-11-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c (parse_units),
	(clutter_actor_parse_custom_node),
	(clutter_scriptable_iface_init): Override the parsing code
	for the x, y, width and height properties of ClutterActor,
	to allow strings with modifiers when defining the position
	and/or the dimensions of an actor. Bare integers are assumed
	as pixels; floating point values in the [0, 1] interval are
	assumed as percentages; strings can have these modifiers:

	  - px - pixels
	  - mm - millimeters
	  - pt - points (at the current resolution)
	  - %  - percentage of the stage

	* clutter/clutter-units.h: Fix the conversion macros

	* tests/test-script.json: Test the new values.

2007-11-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-model.[ch]: Slight API change in the constructor
	functions for ClutterModel: clutter_model_new() now takes a list
	of GType/string pairs for both the column type and the column name.

	(clutter_model_set_n_columns),
	(clutter_model_set_names),
	(clutter_model_set_types): Subclasses of ClutterModel will be able
	to call clutter_model_set_types() and clutter_model_set_names() in
	any order, provided that they don't call each function more than
	once.

	* tests/test-model.c: Update the test case.

2007-11-29  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	Converted depth and rotation offsets to ClutterUnit.

	(clutter_actor_set_depthu):
	(clutter_actor_get_depthu):
	Additional ClutterUnit API.

	(_clutter_actor_apply_modelview_transform):
	Use cogl_translatex() in place of cogl_translate().

2007-11-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* *: Add svn:ignore property to every directory, so that
	svn status starts being useful.

2007-11-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-main.c: (generate_enter_leave_events):
	Minor formatting tweak.
	* configure.ac:
	Typo fix from Damien Lespiau (via mailing list)
