@@ -138,6 +138,8 @@ gboolean         clutter_timeline_is_playing            (ClutterTimeline *timeli
 void             clutter_timeline_set_delay             (ClutterTimeline *timeline,
                                                          guint            msecs);
 guint            clutter_timeline_get_delay             (ClutterTimeline *timeline);
+guint            clutter_timeline_get_delta             (ClutterTimeline *timeline,
+                                                         guint           *msecs);
 
 G_END_DECLS
 
